Ajustando detalhes projeto final

--- a/temporada1.html
+++ b/temporada1.html
@@ -37,12 +37,12 @@
     </header>
     
 
-    <main class="main_tum">
+    <main class="main_temporadas">
         <h1>Temporada 1</h1>
         <br><br>
         <div class="linha-horizontal"></div>
 
-        <div id="temporada_um">
+        <div id="temporadas">
             <img class="t1e1" src="./imagens/temporada1/t1e1.jpg" alt="imagem ep1">
             <h2>T1:E1 "Episódio 1"</h2>
             <p> O ambicioso gângster Thomas Shelby percebe que um carregamento de armas desaparecido pode ser sua grande chance de subir na vida. </p>
@@ -75,7 +75,11 @@
         </div>
     </main>
     
-    <footer>Todos os direitos reservados</footer>
+    <footer>© 2024. Desenvolvido por João 
+        <a href="https://www.linkedin.com/in/jo%C3%A3o-paulo-77b9271ba/" target="_blank"><img src="./imagens/icones/icone-linkedin2.png" alt="linkedin"></a> 
+        <a href="https://www.instagram.com/peakyblindersofficial/" target="_blank"><img src="./imagens/icones/icone-instagram2.png" alt="instagram"></a>
+        <a href="https://twitter.com/ThePeakyBlinder" target="_blank"><img src="./imagens/icones/icone-x.png" alt="x"></a>
+    </footer>
 
 </body>
 </html>
