--- a/temporada2.html
+++ b/temporada2.html
@@ -35,12 +35,12 @@
         </nav>
     </header>
    
-    <main class="main_tdois">
+    <main class="main_temporadas">
         <h1>Temporada 2</h1>
         <br><br>
         <div class="linha-horizontal"></div>
 
-        <div id="temporada_dois">
+        <div id="temporadas">
             <img class="t2e1" src="./imagens/temporada2/t2e1.jpg" alt="imagem ep1">
             <h2>T2:E1 "Episódio 1"</h2>
             <p>O pub preferido de Tommy Shelby, chefe do crime de Birmingham, é destruído por uma explosão e ele é chantageado para assassinar um dissidente irlandês.</p>
@@ -73,6 +73,10 @@
         </div>
     </main>
     
-    <footer>Todos os direitos reservados</footer>
+    <footer>© 2024. Desenvolvido por João 
+        <a href="https://www.linkedin.com/in/jo%C3%A3o-paulo-77b9271ba/" target="_blank"><img src="./imagens/icones/icone-linkedin2.png" alt="linkedin"></a> 
+        <a href="https://www.instagram.com/peakyblindersofficial/" target="_blank"><img src="./imagens/icones/icone-instagram2.png" alt="instagram"></a>
+        <a href="https://twitter.com/ThePeakyBlinder" target="_blank"><img src="./imagens/icones/icone-x.png" alt="x"></a>
+    </footer>
 </body>
 </html>
