--- a/temporada3.html
+++ b/temporada3.html
@@ -36,12 +36,12 @@
         </nav>
     </header>
    
-    <main class="main_ttres">
+    <main class="main_temporadas">
         <h1>Temporada 3</h1>
         <div class="linha-horizontal"></div>
         <br><br>
 
-        <div id="temporada_tres">
+        <div id="temporadas">
 
             <img class="t3e1" src="./imagens/temporada3/t3e1.jpg" alt="imagem ep1">
             <h2>T3:E1 "Episódio 1"</h2>
@@ -76,7 +76,11 @@
         </div>
     </main>
     
-    <footer>Todos os direitos reservados</footer>
+    <footer>© 2024. Desenvolvido por João 
+        <a href="https://www.linkedin.com/in/jo%C3%A3o-paulo-77b9271ba/" target="_blank"><img src="./imagens/icones/icone-linkedin2.png" alt="linkedin"></a> 
+        <a href="https://www.instagram.com/peakyblindersofficial/" target="_blank"><img src="./imagens/icones/icone-instagram2.png" alt="instagram"></a>
+        <a href="https://twitter.com/ThePeakyBlinder" target="_blank"><img src="./imagens/icones/icone-x.png" alt="x"></a>
+    </footer>
 
 </body>
 </html>
