--- a/temporada4.html
+++ b/temporada4.html
@@ -36,10 +36,10 @@
         </nav>
     </header>
    
-    <main class="main_tquatro">
+    <main class="main_temporadas">
         
 
-        <div id="temporada_quatro">
+        <div id="temporadas">
             <h1>Temporada 4</h1>
             <div class="linha-horizontal"></div>
             <br><br>
@@ -76,6 +76,10 @@
         </div>
     </main>
     
-    <footer>Todos os direitos reservados</footer>
+    <footer>© 2024. Desenvolvido por João 
+        <a href="https://www.linkedin.com/in/jo%C3%A3o-paulo-77b9271ba/" target="_blank"><img src="./imagens/icones/icone-linkedin2.png" alt="linkedin"></a> 
+        <a href="https://www.instagram.com/peakyblindersofficial/" target="_blank"><img src="./imagens/icones/icone-instagram2.png" alt="instagram"></a>
+        <a href="https://twitter.com/ThePeakyBlinder" target="_blank"><img src="./imagens/icones/icone-x.png" alt="x"></a>
+    </footer>
 </body>
 </html>
