--- a/temporada5.html
+++ b/temporada5.html
@@ -36,13 +36,12 @@
         </nav>
     </header>
    
-    <main class="main_tcinco">
+    <main class="main_temporadas">
         
 
-        <div id="temporada_cinco">
+        <div id="temporadas">
             <h1>Temporada 5</h1>
             <div class="linha-horizontal"></div>
-            <br><br><br><br><br><br><br>
 
             <img class="t5e1" src="./imagens/temporada5/t5e1.jpg" alt="imagem ep1">
             <h2>T5:E1 "Catástrofe na terça-feira"</h2>
@@ -76,7 +75,11 @@
         </div>
     </main>
     
-    <footer>Todos os direitos reservados</footer>
+    <footer>© 2024. Desenvolvido por João 
+        <a href="https://www.linkedin.com/in/jo%C3%A3o-paulo-77b9271ba/" target="_blank"><img src="./imagens/icones/icone-linkedin2.png" alt="linkedin"></a> 
+        <a href="https://www.instagram.com/peakyblindersofficial/" target="_blank"><img src="./imagens/icones/icone-instagram2.png" alt="instagram"></a>
+        <a href="https://twitter.com/ThePeakyBlinder" target="_blank"><img src="./imagens/icones/icone-x.png" alt="x"></a>
+    </footer>
 
 </body>
 </html>
